--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -1,2 +1,24 @@
-<p><%= todo_item.content %></p>
-<%= link_to "delete", todo_todo_item_path(@todo, todo_item.id), method: :delete, data: { confirm: "Are you sure?"} %>
+<div class="row clearfix">
+    <% if todo_item.completed? %>
+        <div class="completed">
+            <%= link_to "Mark as Complete", complete_todo_todo_item_path(@todo, todo_item.id), method: :patch %>
+        </div>
+        <div class="todo_item">
+            <p style="opacity 0.4;"><strike> <%= todo_item.content %></strike></p>
+        </div>
+        <div class="trash">
+            <%= link_to "delete", todo_todo_item_path(@todo, todo_item.id), method: :delete, data: { confirm: "Are you sure?"} %>
+        </div>
+    <% else %>
+        <div class="completed">
+            <%= link_to "Mark as Complete", complete_todo_todo_item_path(@todo, todo_item.id), method: :patch %>
+        </div>
+        <div class="todo_item">
+            <p><%= todo_item.content %></p>
+        </div>
+        <div class="trash">
+            <%= link_to "delete", todo_todo_item_path(@todo, todo_item.id), method: :delete, data: { confirm: "Are you sure?"} %>
+        </div>
+    <% end %>
+</div>
+
